# pcl_velodyne_ws

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: velodyne_description.pc  velodyne_gazebo_plugins.pc
devel/share/velodyne_description/cmake/: velodyne_descriptionConfig.cmake
devel/share/velodyne_gazebo_plugins/cmake/: velodyne_gazebo_pluginsConfig.cmake
src/basic_pcl/: CMakeLists.txt  package.xml
src/basic_pcl/src/: SubscribePointCloud2Message.cpp
src/progressive_morphological_filter/: CMakeLists.txt  package.xml
src/progressive_morphological_filter/src/: ProgressiveMorphologicalFilter.cpp
src/turtlebot3_velodyne/turtlebot3_velodyne_description/: CMakeLists.txt  package.xml
src/turtlebot3_velodyne/turtlebot3_velodyne_description/urdf/: HDL-32E.urdf.xacro  VLP-16.urdf.xacro  turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
src/turtlebot3_velodyne/turtlebot3_velodyne_gazebo/: CMakeLists.txt  package.xml
src/turtlebot3_velodyne/turtlebot3_velodyne_gazebo/launch/: progressive_morphological_filter.launch  turtlebot3_empty_world.launch
src/turtlebot3_velodyne/turtlebot3_velodyne_gazebo/rviz/: example.rviz  progressive_morphological_filter.rviz
src/turtlebot3_velodyne/turtlebot3_velodyne_gazebo/src/: turtlebot3_drive.cpp
src/turtlebot3_velodyne/turtlebot3_velodyne_gazebo/worlds/: empty.world  progressive_morphological_filter.world
